# music-curator

./: .env.example  .gitignore  LICENSE  README.md  music_curator.py
affective_playlists/: .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  WEB_FRONTEND_QUICKSTART.md  __init__.py  main.py  pyproject.toml  requirements.txt  run_local.py  setup.py
affective_playlists/.github/agents/: agent.agent.md
affective_playlists/data/artist_lists/: electronic.json  hiphop.json  rock.json  world.json
affective_playlists/data/config/: genre_map.json  weights.json
affective_playlists/docs/: INSTALLATION.md  OVERVIEW.md  README.md
affective_playlists/docs/architecture/: README.md
affective_playlists/docs/archive/archived-reports/: README.md  WORK_SUMMARY_JAN4_2026.md
affective_playlists/docs/domain-guides/: README.md
affective_playlists/docs/summary/: README.md
affective_playlists/openspec/: cli.py  config.yaml
affective_playlists/src/: __init__.py  apple_music.py  apple_music_structure.py  audio_tags.py  celery_app.py  cli_ui.py  config.py  curation_models.py  curation_service.py  curation_snapshot.py  curation_store.py  db.py  http_utils.py  job_store.py  library_state_store.py  metadata_fill.py  metadata_queries.py  models.py  music_tools.py  normalizer.py  playlist_manager.py  playlist_utils.py  plsort.py  prompts.py  rate_limiter.py  realtime.py  result_utils.py  tasks.py  temperament_analyzer.py  track_metadata.py  web_server.py  web_server_old.py
affective_playlists/src/scripts/: bulk_fav_songs.applescript  consolidate_fav_playlist.applescript  curation_structure.applescript  dedupe_fav_songs.applescript  get_ids_playlistfolders.applescript  get_ids_playlists.applescript  get_tracks_info_playlists.applescript  move_playlist_to_folder.applescript
affective_playlists/tests/: test_apple_music_folder_structure.py  test_apple_music_structure.py  test_audio_tags.py  test_background_jobs.py  test_curation_models.py  test_curation_service.py  test_curation_store.py  test_e2e.py.bak  test_enrich_once_hierarchy.py  test_integration.py  test_integration_service.py  test_job_persistence.py  test_library_state_store.py  test_main_cli_platform.py  test_metadata_enrichment.py  test_metadata_enrichment_interactive.py  test_metadata_fill.py  test_playlist_classifier.py  test_playlist_fuzzy_matching.py  test_playlist_manager.py  test_rate_limiting.py  test_temperament_analyzer_quick.py  test_web_server.py
affective_playlists/tests/fixtures/: apple_music_folder_structure_valid.txt
affective_playlists/web/: index.html
(+156 files in other folders)
